--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -398,22 +398,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CXHtFv56PDf-",
-        "outputId": "ae113fbb-f681-4f63-e2f8-d3af910dee62"
+        "outputId": "354229d3-c1b2-47cb-9639-b8ec6e44f38c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Serial time (sTime):   0.015425 seconds\n",
-            "Parallel time (pTime): 0.035808 seconds\n",
-            "Difference (serial - parallel): -0.020383 seconds\n"
+            "Serial Processing Time: 0.023910227999749623\n",
+            "Parallel Processing Time: 0.04674291700030153\n"
           ]
         }
       ],
@@ -421,72 +420,39 @@
         "#si-exercise\n",
         "\n",
         "import numpy as np\n",
-        "import time\n",
+        "import timeit\n",
         "import multiprocessing as mp\n",
         "\n",
-        "# ---------- Core simulation for one bootstrap draw ----------\n",
+        "def simulate_y(n_samples):\n",
+        "    alpha = np.random.normal(15, 2, n_samples)\n",
+        "    x1 = np.random.normal(3, 5, n_samples)\n",
+        "    x2 = np.random.normal(10, 1, n_samples)\n",
+        "    x3 = np.random.normal(8, 8, n_samples)\n",
+        "    epsilon = np.random.normal(0, 1, n_samples)\n",
+        "    y = alpha + x1 + 2 * x2 + 0.5 * x3 + epsilon\n",
+        "    return y\n",
         "\n",
-        "def simulate_once(n_draws=1000, rng=None):\n",
-        "    if rng is None:\n",
-        "        rng = np.random.default_rng()\n",
-        "\n",
-        "    alpha = rng.normal(15, 2, size=n_draws)\n",
-        "    x1    = rng.normal(3, 5, size=n_draws)\n",
-        "    x2    = rng.normal(10, 1, size=n_draws)\n",
-        "    x3    = rng.normal(8, 8, size=n_draws)\n",
-        "    eps   = rng.normal(0, 1, size=n_draws)\n",
-        "\n",
-        "    y = alpha + x1 + 2 * x2 + 0.5 * x3 + eps\n",
-        "    return float(y.mean())\n",
-        "\n",
-        "\n",
-        "# ---------- Serial version ----------\n",
-        "\n",
-        "def sCalc(n_boot=100, n_draws=1000, seed=None):\n",
-        "    rng = np.random.default_rng(seed)\n",
+        "def sCalc(n_samples, n_reps):\n",
         "    results = []\n",
-        "    for _ in range(n_boot):\n",
-        "        results.append(simulate_once(n_draws=n_draws, rng=rng))\n",
+        "    for _ in range(n_reps):\n",
+        "        y = simulate_y(n_samples)\n",
+        "        results.append(np.mean(y))\n",
         "    return results\n",
         "\n",
+        "def pCalc(n_samples, n_reps):\n",
+        "    with mp.Pool(processes=2) as pool:\n",
+        "        ys = pool.map(simulate_y, [n_samples] * n_reps)\n",
+        "    return [np.mean(y) for y in ys]\n",
         "\n",
-        "# ---------- Parallel version helpers ----------\n",
-        "\n",
-        "def _simulate_once_seeded(args):\n",
-        "    n_draws, seed = args\n",
-        "    rng = np.random.default_rng(int(seed))\n",
-        "    return simulate_once(n_draws=n_draws, rng=rng)\n",
-        "\n",
-        "\n",
-        "def pCalc(n_boot=100, n_draws=1000, seed=None, n_cores=2):\n",
-        "    base_rng = np.random.default_rng(seed)\n",
-        "    seeds = base_rng.integers(0, 1_000_000_000, size=n_boot)\n",
-        "\n",
-        "    args_list = [(n_draws, int(s)) for s in seeds]\n",
-        "\n",
-        "    with mp.Pool(processes=n_cores) as pool:\n",
-        "        results = pool.map(_simulate_once_seeded, args_list)\n",
-        "\n",
-        "    return results\n",
+        "sTime = timeit.Timer('sCalc(1000, 100)', globals=globals()).timeit(number=1)\n",
+        "pTime = timeit.Timer('pCalc(1000, 100)', globals=globals()).timeit(number=1)\n",
         "\n",
         "\n",
-        "# ---------- Run and time both versions ----------\n",
+        "sResults = sCalc(1000, 100)\n",
+        "pResults = pCalc(1000, 100)\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Serial timing\n",
-        "    start = time.perf_counter()\n",
-        "    sResults = sCalc(n_boot=100, n_draws=1000, seed=123)\n",
-        "    sTime = time.perf_counter() - start\n",
-        "\n",
-        "    # Parallel timing (2 cores)\n",
-        "    start = time.perf_counter()\n",
-        "    pResults = pCalc(n_boot=100, n_draws=1000, seed=123, n_cores=2)\n",
-        "    pTime = time.perf_counter() - start\n",
-        "\n",
-        "    # Report performance\n",
-        "    print(f\"Serial time (sTime):   {sTime:.6f} seconds\")\n",
-        "    print(f\"Parallel time (pTime): {pTime:.6f} seconds\")\n",
-        "    print(f\"Difference (serial - parallel): {sTime - pTime:.6f} seconds\")"
+        "print(\"Serial Processing Time:\", sTime)\n",
+        "print(\"Parallel Processing Time:\", pTime)"
       ]
     }
   ],
